[package]
name = "hello-world"
version = "0.0.1"
authors = ["Jack Shih <i@kshih.com>"]

[dependencies]
log = "*"
env_logger = "*"
diesel = { version = "*", features = ["postgres"] }
dotenv = "*"
snowflake = { version = "*", features = ["serde_support"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
actix = "*"
actix-web = "*"
futures = "*"
