[package]
name = "carrier"
version = "0.1.0"
authors = ["Jack Shih <develop@kshih.com>"]
edition = "2018"

[dependencies]
iotship-derive = { version = "*", path="../iotship-derive"}
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-xml-rs = "*"
chrono = { version = "*", features = ["serde"] }
block-modes = "*"
hex-literal = "*"
sha1 = "*"
sha2 = "*"
des = "*"
base64 = "*"
reqwest = { version = "*", features = ["default-tls-vendored"] }
generic-array = "*"
