[package]
name = "carrier"
version = "0.1.1"
authors = ["Jack Shih <i@kshih.com>"]
edition = "2018"

[dependencies]
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-xml-rs = "*"
block-modes = "*"
des = "*"
sha1 = "*"
sha2 = "*"
base64 = "*"
quick-xml = "*"
chrono = { version = "*", features = ["serde"] }
isahc = { version = "*", features = ["json"] }
reqwest = { version = "*", features = ["default-tls-vendored"] }
xmlparser = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench_main"
harness = false
